# blink

./: .clang-format  CMakeLists.txt  Cargo.toml  LICENSE  README.md  TODO.md
app/: CMakeLists.txt  main.cpp
core/: CMakeLists.txt  error.cppm  gui.cppm  make.cppm  parsing.cppm  remove.cppm  stfm.cppm
include/: error.h  operations.h  parsing.h  stfm.h
include/operations/: make.h  remove.h
src/: CMakeLists.txt  main.cpp  main.rs  operations.cpp  parsing.cpp  stfm.cpp
src/blink/: app.rs  bookmarks.rs  config.rs  entries.rs  file_style.rs  logging.rs  mod.rs  rendering.rs  states.rs  thread_pool.rs  trash_manager.rs
src/blink/archive/: mod.rs  zip.rs
src/blink/config/: behaviour.rs  colorscheme.rs  config.rs  keybindings.rs  mod.rs  ui.rs
src/blink/operations/: copy_file_operation.rs  create_file_operation.rs  delete_file_operation.rs  mod.rs  rename_file_operation.rs
src/blink/states/: bookmark_states.rs  delete_path_state.rs  log_state.rs  main_state.rs  mod.rs  new_path_state.rs  rename_path_state.rs  state_trait.rs  visual_selection_states.rs
src/operations/: make.cpp  remove.cpp
src/stfm/: app.rs  bookmarks.rs  config.rs  entries.rs  file_style.rs  message.rs  mod.rs  model.rs  operations.rs  parsing.rs  rendering.rs  states.rs
